overflow bug sorted out

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -9,6 +9,7 @@ html, body, #home{
 
 
 
+
 body{
 	background: url(../img/capa.png), url(../img/ruido.png), linear-gradient(50deg, #ff4169, #7c26f8 );
 	background-attachment: fixed;
@@ -80,8 +81,11 @@ nav.navbar-transparente{
 
 #servicos{
 	background: white;
-	
+	position: relative;
+	z-index: -3;
 }
+
+
 
 #servicos h2, h3 {
 	color: #7c25f8;
@@ -99,6 +103,8 @@ nav.navbar-transparente{
 
 #recursos{
 	color: white;
+	position: relative;
+	z-index: -3;
 }
 
 .albuns{
@@ -225,6 +231,8 @@ h3{
 	width: 120px;
 	}
 
+	
+
 }
 
 /*// Small devices (landscape phones, 576px and up)*/
@@ -280,6 +288,22 @@ h3{
 		margin-bottom: 0;
 	}
 
+	img.img-peq{
+		width: 20px;
+	}
+
+	#img-peq{
+		width: 90px;
+		padding: 4px 0;
+	}
+
+	#padim{
+
+	}
+
+	
+
+
 
 	/*______________________________________________________*/
 
@@ -316,6 +340,11 @@ nav.navbar-transparente {
 
 	.logo-rodape img{
 		width: 97px;
+	}
+
+	.col-mover{
+		margin-left: -20px;
+		padding-right: 50px;
 	}
 }
 
